# nordictrack_t5

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults
docs/: SDD-001-esp32s3-firmware.md  SDD-002-ble-telemetry.md  SDD-003-wifi-mqtt-discovery.md  SDD-004-provisioning.md  SDD-005-mqtt-ota.md  TREADMILL_PROTOCOL.md
enclosure/: README.md  treadmill-s3-enclosure.scad
homeassistant/: README.md
homeassistant/dashboards/: fitness.yaml
homeassistant/templates/: treadmill_calories.yaml
main/: CMakeLists.txt  Kconfig.projbuild  ble_prov.c  ble_prov.h  ble_treadmill.c  ble_treadmill.h  captive_portal.c  captive_portal.h  led_status.c  led_status.h  main.c  mqtt_manager.c  mqtt_manager.h  nvs_config.c  nvs_config.h  ota_handler.c  ota_handler.h  wifi_manager.c  wifi_manager.h
tools/: treadmill_poll.py
